# GodotSteam

./: .gitignore  CMakeLists.txt  SConstruct  godotsteam.cpp  godotsteam.gdextension  godotsteam.h  register_types.cpp  steam_id.cpp  steam_id.h  steam_multiplayer_peer.cpp  steam_multiplayer_peer.h
godotsteam/: godotsteam.h
godotsteam/src/: godotsteam.cpp  register_types.cpp  steam_enums.h
godotsteam/src/steam_multiplayer_peer/: steam_connection.cpp  steam_connection.h  steam_multiplayer_peer.cpp
godotsteam/src/utils/: log.cpp  log.hpp  utils.hpp
godotsteam/src/wabisoft_steam_peer/: wabisoft_steam_peer.cpp  wabisoft_steam_peer.h
godotsteam/steam_multiplayer_peer/: steam_connection.h  steam_connection.os  steam_id.cpp  steam_id.h  steam_id.os  steam_multiplayer_peer.cpp  steam_multiplayer_peer.h  steam_multiplayer_peer.os
godotsteam/wabisoft_steam_peer/: wabisoft_steam_peer.cpp  wabisoft_steam_peer.h
steam_multiplayer_peer/: steam_connection.cpp  steam_id.h  steam_multiplayer_peer.h
testMultiplayer/: .gitignore  export_presets.cfg  icon.svg.import  main.tscn  mp_character.tscn  project.godot  versionLabel.gd
